boxes on grid system

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,11 +1,10 @@
 ---
 title: TODO
 description: TODO
-class: 'index ja'
 styles:
-  - main
-scripts:
   - main
 ---
 
-h1 index page
+#app
+
+= javascript_include_tag '/script/main'
